# pii-detection-and-anonymizer

./: .envrc  .gitignore  Dockerfile  LICENSE  PII detection & Anonymizer.postman_collection.json  README.md  app.py  flake.nix  pyproject.toml  requirements.txt  sample.txt  sample_data.anonymized.csv  sample_data.json  sample_data.yml  setup.sh  vault.sh
.github/workflows/: build.yaml  publish.yml  test.yaml
analyzer_engine/: csv_analyzer_engine.py  image_redactor.py
config/: nlp_engine_config.py
dbt_pii/: .gitignore  README.md  dbt_project.yml  profiles.yml  pyproject.toml
dbt_pii/models/: models.yml  pii_info.sql  sources.yml
dbt_pii/seeds/: info.csv
pii_detection_and_anonymizer/: __main__.py  app.py  cli.py
pii_detection_and_anonymizer/config/: nlp_engine_config.py
recognizer/: flair_recognizer.py
src/: app.py  cli.py  vault.py
src/analyzer_engine/: csv_analyzer_engine.py  image_redactor.py
src/config/: nlp_engine_config.py
src/operators/: vault.py
src/recognizer/: flair_recognizer.py
src/text/: text.py
src/util/: image_util.py
src/utils/: formatter.py
tests/: app_test.py
tests/analyzer_engine/: csv_analyzer_engine_test.py  image_redactor_test.py
tests/operators/: vault_test.py
tests/recognizer/: flair_recognizer_test.py
tests/sample_data/: anonymized_data.csv  sample_data.csv  vault_encrypted.csv
util/: image_util.py
