[tool.poetry]
name = "pii-detection-and-anonymizer"
version = "0.1.1"
description = ""
authors = ["Akshay Karle <1443108+akshaykarle@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
flair = "^0.13.1"
spacy = "^3.7.4"
scipy = "<1.13.0"
presidio-anonymizer = "^2.2.354"
presidio-analyzer = {version = "^2.2.354", extras = ["transformers", "stanza"]}
pytest = "^8.2.1"
flask = "^3.0.3"
hvac = "^2.3.0"
black = "^24.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]