[tool.poetry]
name = "pii-detection-and-anonymizer"
version = "0.1.1"
description = ""
authors = ["Akshay Karle <1443108+akshaykarle@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pii_detection_and_anonymizer"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
flair = "^0.14.0"
spacy = "^3.7.4"
presidio-anonymizer = "^2.2.354"
presidio-analyzer = {version = "^2.2.354", extras = ["transformers", "stanza"]}
flask = "^3.0.3"
black = "^24.8.0"
presidio-vault = "^0.1.0"
# On Intel macs torch has been deprecated from 2.3 onwards. More info: https://github.com/nix-community/poetry2nix/issues/1311#issuecomment-2376102452
torch = [
    { markers = "platform_system == 'Darwin' and platform_machine == 'x86_64'", version = "~2.2" },
    { markers = "platform_system == 'Darwin' and platform_machine == 'arm64'", version = "^2.2" },
    { markers = "platform_system == 'Linux'", version = "^2.2" },
]
numpy = "<2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[tool.poetry.scripts]
cli = "pii_detection_and_anonymizer.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
