[tool.poetry]
name = "pii-detection-and-anonymizer"
version = "0.1.1"
description = ""
authors = ["Akshay Karle <1443108+akshaykarle@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pii_detection_and_anonymizer"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
flair = "^0.14.0"
flask = "^3.0.3"
presidio-vault = "^0.1.0"
# On Intel macs torch has been deprecated from 2.3 onwards. More info: https://github.com/nix-community/poetry2nix/issues/1311#issuecomment-2376102452
torch = [
    { markers = "platform_system == 'Darwin' and platform_machine == 'x86_64'", version = "~2.2" },
    { markers = "platform_system == 'Darwin' and platform_machine == 'arm64'", version = "^2.2" },
    { markers = "platform_system == 'Linux'", version = "^2.2" },
]
spacy = "^3.8.2"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl"}
presidio-anonymizer = "^2.2.355"
presidio-analyzer = "^2.2.355"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"

[tool.poetry.scripts]
cli = "pii_detection_and_anonymizer.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
